envoy-proxy+control-plane+consul

--- a/envoy-proxy/consul/config-enhanced.json
+++ b/envoy-proxy/consul/config-enhanced.json
@@ -9,6 +9,7 @@
   "enable_script_checks": true,
   "enable_local_script_checks": true,
   "ports": {
+    "http": 8500,
     "grpc": 8502,
     "dns": 8600
   },
@@ -24,5 +25,8 @@
   "dns_config": {
     "enable_truncate": true,
     "only_passing": false
+  },
+  "acl": {
+    "enabled": false
   }
 }
