remove debug log, fixed node id

--- a/envoy-proxy/envoy/envoy-dynamic-udp.yaml
+++ b/envoy-proxy/envoy/envoy-dynamic-udp.yaml
@@ -1,6 +1,6 @@
 node:
   cluster: game_proxy_cluster
-  id: envoy_instance_01
+  id: proxy-1 #envoy_instance_01
 
 dynamic_resources:
   lds_config:
